Store the allocated buffer against FILE, plugging a memory leak. Fixes PR bin/42183.